--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 asgiref==3.8.1
 dj-database-url==2.3.0
 Django==4.2.16
+django-honeypot==1.2.1
+django-ranged-response==0.2.0
+django-simple-captcha==0.6.1
+djangorestframework==3.15.2
 gunicorn==23.0.0
 packaging==24.2
+pillow==11.1.0
 psycopg2==2.9.10
 sqlparse==0.5.2
 typing_extensions==4.12.2
